tests/failing/invalid_literal.dodo
// Expected: 'else' not found in scope

fn main() {
    let x: u32 = else;
}
